-
Bug
-
Resolution: Done
-
P4: Low
-
5.8.0
-
None
-
Linux fx-8320 4.9.6-1-ARCH #1 SMP PREEMPT Thu Jan 26 09:22:26 CET 2017 x86_64 GNU/Linux
QQuickItem apparently has a new delete mismatch:
#0 0x7f2f6b0feb80 in operator delete(void*, unsigned long) /build/gcc-multilib/src/gcc/libsanitizer/asan/asan_new_delete.cc:108 #1 0x7f2f677b0810 in QObjectPrivate::deleteChildren() (/usr/lib/libQt5Core.so.5+0x2b2810) #2 0x7f2f677ba16e in QObject::~QObject() (/usr/lib/libQt5Core.so.5+0x2bc16e) #3 0x7f2f66b6b78a (/usr/lib/libQt5Quick.so.5+0xe578a) #4 0x7f2f677b0810 in QObjectPrivate::deleteChildren() (/usr/lib/libQt5Core.so.5+0x2b2810) #5 0x7f2f677ba16e in QObject::~QObject() (/usr/lib/libQt5Core.so.5+0x2bc16e) #6 0x7f2f66c5343e in QQuickItem::~QQuickItem() (/usr/lib/libQt5Quick.so.5+0x1cd43e) #7 0x7f2f66c6d115 (/usr/lib/libQt5Quick.so.5+0x1e7115) #8 0x7f2f677b2fdf in QObject::event(QEvent*) (/usr/lib/libQt5Core.so.5+0x2b4fdf) #9 0x7f2f66c4ffaa in QQuickItem::event(QEvent*) (/usr/lib/libQt5Quick.so.5+0x1c9faa) #10 0x7f2f6847134b in QApplicationPrivate::notify_helper(QObject*, QEvent*) (/usr/lib/libQt5Widgets.so.5+0x15334b) #11 0x7f2f68478b60 in QApplication::notify(QObject*, QEvent*) (/usr/lib/libQt5Widgets.so.5+0x15ab60) #12 0x7f2f6778683f in QCoreApplication::notifyInternal2(QObject*, QEvent*) (/usr/lib/libQt5Core.so.5+0x28883f) #13 0x7f2f67788fcc in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (/usr/lib/libQt5Core.so.5+0x28afcc) #14 0x7f2f677db042 (/usr/lib/libQt5Core.so.5+0x2dd042) #15 0x7f2f69780586 in g_main_context_dispatch (/usr/lib/libglib-2.0.so.0+0x4a586) #16 0x7f2f697807ef (/usr/lib/libglib-2.0.so.0+0x4a7ef) #17 0x7f2f6978089b in g_main_context_iteration (/usr/lib/libglib-2.0.so.0+0x4a89b) #18 0x7f2f677db44e in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (/usr/lib/libQt5Core.so.5+0x2dd44e) #19 0x7f2f67784c99 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (/usr/lib/libQt5Core.so.5+0x286c99) #20 0x7f2f6778d1e3 in QCoreApplication::exec() (/usr/lib/libQt5Core.so.5+0x28f1e3) #21 0xa29d8c in BSP_Qt5_core::run(QApplication*) /home/janezz/bspdev/bsp6/modules/gui/qt5_qml/bsp_qt5_core.cpp:674 #22 0xa22ac0 in BSP_QT5Interface::run() /home/janezz/bspdev/bsp6/modules/gui/qt5_qml/bsp_qt5interface.cpp:198
- is duplicated by
-
QTBUG-59338 Address sanitizer issue on Linux
-
- Closed
-
-
QTBUG-65310 AddressSanitizer error in QtQuickTemplates2
-
- Closed
-
For Gerrit Dashboard: QTBUG-58524 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
236245,4 | Fix ASAN warnings about new-delete-size-mismatch | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |